--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.6",
     "express-validator": "^6.12.0",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^2.0.1",
     "mongoose": "^5.13.2",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
